--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -714,6 +714,61 @@
   <p><em>ⲏ</em> et <em>ⲟⲓ</em> se prononcent aussi <em>ⲓ</em>. Il y a donc cinq manières différentes de représenter le son <i>i</i>: <em>ⲉⲓ</em> <em>ⲟⲓ</em> <em>ⲏ</em> <em>ⲓ</em> <em>ⲩ</em>, d'où il est résulté l'inconvénient que ces lettres ont été souvent remplacées les unes par les autres dans l'écriture.</p>
   <p>Au commencement des mots grecs, les voyelles, qu'elles aient l'esprit doux ou l'esprit rude, prennent souvent l'aspirée douce <em>ϩ</em>. Ceci a lieu surtout pour la voyelle <i>i</i>, de quelque manière qu'elle soit écrite: <em>ϩⲓⲛⲁ</em> = <em>ἵνα</em>, <em>ϩⲓⲣⲏⲛⲏ</em> = <em>εἰρήνη</em>.</p>
   <h3>C. Des Syllabes.</h3>
+  <p><i>Remarque.</i> Dans la phonétique en général et la théorie des syllabes, on peut considérer le copte en lui-même ou bien dans ses rapports avec l'égyptien. Cette seconde méthode serait sans doute féconde et instructive, mais elle exigerait des développements qui sortent du cadre de ce manuel. Elle supposerait en outre que la phonétique égyptienne est établie sur des principes certains et fixée par des règles précises. Or il n'en est rien. La science égyptologique est encore bien hésitante à ce sujet. Il nous semble donc préférable de nous limiter à l'étude du copte en lui-même. Nous indiquerons cependant quelques considérations ayant trait aux rapports de l'égyptien et du copte. Ces considérations semblent être admises par tous les Egyptologues et sont nécessaires pour l'intelligence de la morphologie copte.</p>
+  <h4 class="smallcaps">I. Des syllabes en elles-mêmes.</h4>
+  <p>Il y a en copte deux espèces de syllabes: la syllabe <i>ouverte</i> et la syllabe <i>fermée</i>.</p>
+  <p>La syllabe ouverte est celle qui est terminée par une voyelle: <em>ⲥⲱ</em> «boire», <em>ⲙⲁ</em> «lieu», <em>ⲥⲱ-ⲛⲓ</em> «sœur»; la syllabe fermée, celle qui est terminée par une consonne: <em>ⲥⲟⲡ</em> «fois», <em>ⲉⲣ</em> «faire», <em>ⲥⲟⲗ-ⲥⲉⲗ</em> «consoler».</p>
+  <p>Il peut y avoir en copte des syllabes ouvertes qui en égyptien étaient fermées, ou inversement, des syllabes fermées qui en égyptien étaient ouvertes. Elles seront considérées telles qu'elles sont en copte.</p>
+  <h4 class="smallcaps">II. Des syllabes dans les mots.<br>Accent tonique.</h4>
+  <p>Parmi les voyelles d'un même mot, il en est une principale qui lui donne sa forme particulière et reçoit l'accent tonique, nous l'appellerons voyelle <i>formative</i>:</p>
+  <p><em>ⲣⲱ́ⲙⲓ</em> «homme», <em>ⲥⲟ́ⲗⲥⲉⲗ</em> «consoler», <em>ϣⲫⲏ́ⲣⲓ</em> «merveille», <em>ⲛⲟⲩ́ϯ</em> «Dieu». Dans chacun de ces mots, la voyelle marquée de l'accent est la voyelle <i>formative</i>.</p>
+  <p>L'accent tonique est toujours à la dernière ou à l'avant-dernière syllabe.</p>
+  <p>Les autres voyelles du mot ne sont pas accentuées; aussi elles s'affaiblissent et tendent à disparaître ou à passer à l'état de voyelles furtives, destinées à faciliter la prononciation. Nous les appelons voyelles <i>auxiliaires</i>.</p>
+  <p>Prenons pour exemple le mot <em>ⲛⲟⲩϯ</em> «Dieu»; il avait en égyptien trois radicales <i>ntr</i> distribuées en deux syllabes <i>noú-tir</i><sup class="footnote">1</sup>. La première reçoit l'accent tonique et contient donc la voyelle formative qui pour ce mot est <i>ou</i>, la seconde est composée des deux autres consonnes et d'une voyelle auxiliaire <i>i</i>; <i>r</i> final a disparu en copte (§ 21).</p>
+  <p>L'accent tonique n'est pas nécessairement attaché à la même syllabe; lorsque le mot augmente d'une syllabe, il peut changer de place. Dans ce cas la voyelle formative change avec lui et est remplacée par une voyelle auxiliaire.</p>
+  <p>1. Dans un mot de deux syllabes qui devient trissyllabique, l'accent passe à la deuxième syllabe s'il était sur la première et ne change pas s'il était déjà sur la seconde:</p>
+  <p><em>ⲥⲟ́ⲗ-ⲥⲉⲗ</em> «consoler», <em>ⲥⲉⲗ-ⲥⲱ́-ⲗⲟⲩ</em> «les consoler».</p>
+  <p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> «avec toi», <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> «avec vous».</p>
+  <p><em>ⲉⲣⲙⲏ́</em> pl. <em>ⲉⲣⲙⲱ́ⲟⲩⲓ</em> «larmes».</p>
+  <p>2. Dans un monosyllabe qui augmente d'une syllabe, l'accent tonique ne change généralement pas de place. Seuls quelques pluriels font exception à cette règle:</p>
+  <p><em>ⲥⲟ́ⲛ</em> «frère» pl. <em>ⲥⲛⲏ́ⲟⲩ</em>.</p>
+  <p><em>ϩⲱ́ⲃ</em> «chose» pl. <em>ϩⲃⲏ́ⲟⲩⲓ</em>.</p>
+  <p>De même que les syllabes d'un même mot, plusieurs mots dépendant les uns des autres peuvent se grouper sous un seul accent tonique. Celui-ci porte toujours sur le dernier mot du groupe; les autres perdent donc leur voyelle formative qui est remplacée par une voyelle auxiliaire:</p>
+  <p class="footnote">1. Ici encore, il importe de noter que la prononciation égyptienne <i>noutir</i> n'est pas du tout certaine. D'ailleurs il faudrait la restreindre à la Basse-Egypte, car le Saꜥidique <em>ⲛⲟⲩⲧⲉ</em> fait supposer la prononciation <i>nouter</i> pour la Haute-Egypte. La même remarque s'applique aux autres mots égyptiens cités plus loin (§§ 21–28).</p>
+  <p><em>ⲛⲏ́ⲃ</em> «maître», mais <em>ⲛⲉⲃ-ⲏ́ⲓ</em> «maître de maison»;</p>
+  <p><em>ⲁϥ-ⲥⲱ́ⲛⲧ</em> il a créé,</p>
+  <p><em>ⲁϥ-ⲥⲉⲛⲧ-ⲡⲓ-ⲣⲱ́ⲙⲓ</em> il a créé l'homme;</p>
+  <p><em>ⲁϥ-ⲥⲟ́ⲗⲥⲉⲗ</em> il a consolé,</p>
+  <p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> il a consolé son frère.</p>
+  <h3 class="smallcaps">III. Nature et quantité de la voyelle formative et des voyelles auxiliaires.</h3>
+  <h4>1. Voyelle formative.</h4>
+  <p>En règle générale la voyelle formative est longue dans les syllabes ouvertes et brève dans les syllabes fermées:</p>
+  <p><em>ⲥⲱ́-ⲧⲉⲙ</em> «entendre», <em>ϣⲏ́-ⲣⲓ</em> «fils»; <em>ⲣⲁ́ⲛ</em> «nom», <em>ⲥⲟ́ⲗ-ⲥⲉⲗ</em>.</p>
+  <p>Cette règle souffre beaucoup d'exceptions; celles-ci peuvent s'expliquer par la chute d'anciennes terminaisons égyptiennes ou la disparition de certaines consonnes, ce qui a fait changer la nature des syllabes (§§ 12, 21, 22).</p>
+  <p>A considérer les mots en eux-mêmes, on reconnaît que la phonétique copte admet aussi bien une voyelle longue qu'une voyelle brève dans une syllabe fermée:</p>
+  <p><em>ⲙⲏϣ</em> foule,</p>
+  <p><em>ⲛⲉϥ</em> matelot,</p>
+  <p><em>ϣϣⲏⲛ</em> arbre,</p>
+  <p><em>ϣⲁⲣ</em> peau,</p>
+  <p><em>ⲃⲱⲗ</em> délier,</p>
+  <p><em>ϫⲟⲙ</em> force,</p>
+  <p>et aussi bien une voyelle brève qu'une longue dans une syllabe ouverte:</p>
+  <p><em>ⲫⲉ</em> ciel,</p>
+  <p><em>ϭⲏ</em> coing,</p>
+  <p><em>ⲣⲟ</em> porte,</p>
+  <p><em>ⲃⲱ</em> arbre.</p>
+  <p>La règle trouve surtout son application dans la <i>suffixation</i> (57).</p>
+  <p>Dans ce cas, en vertu de la règle générale:</p>
+  <p>1. Une voyelle longue se change en brève quand elle entre dans une syllabe fermée:</p>
+  <p><em>ⲓ</em> en <em>ⲁ</em>, <em>ⲱ</em> et <em>ⲟⲩ</em> en <em>ⲟ</em>.</p>
+  <p><em>ϭⲓ́-ⲥⲓ</em> exalter, <em>ⲁϥ-ϭⲁ́ⲥ-ⲧⲉⲛ</em> il nous a exaltés;</p>
+  <p><em>ϫⲱ́-ⲕⲉⲙ</em> laver, <em>ⲁϥ-ϫⲟ́ⲕ-ⲙⲉϥ</em> il l'a lavé;</p>
+  <p><em>ⲙⲟⲩ́-ⲛⲕ</em> fabriquer, <em>ⲁϥ-ⲙⲟ́ⲛ-ⲕϥ</em> il l'a fabriqué.</p>
+  <p>2. Réciproquement une voyelle brève se change en longue quand elle entre dans une syllabe ouverte:</p>
+  <p><em>ⲁ</em> en <em>ⲱ</em>, <em>ⲟ</em> en <em>ⲱ</em> ou en <em>ⲟⲩ</em>.</p>
+  <p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> avec toi, <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> avec vous;</p>
+  <p><em>ⲉ-ⲣⲟ́ⲕ</em> vers toi, <em>ⲉ-ⲣⲱ́-ⲧⲉⲛ</em> vers vous.</p>
+  <h4>2. Voyelles auxiliaires.</h4>
 </div>
 	</body>
 </html>
