--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -769,6 +769,21 @@
   <p><em>ⲛⲉ-ⲙⲁ́ⲕ</em> avec toi, <em>ⲛⲉ-ⲙⲱ́-ⲧⲉⲛ</em> avec vous;</p>
   <p><em>ⲉ-ⲣⲟ́ⲕ</em> vers toi, <em>ⲉ-ⲣⲱ́-ⲧⲉⲛ</em> vers vous.</p>
   <h4>2. Voyelles auxiliaires.</h4>
+  <p>1. En règle générale, les voyelles auxiliaires, qu'elles soient dans une syllabe ouverte ou fermée, sont, <em>ⲉ</em> à l'intérieur des mots, <em>ⲓ</em> (S. <em>ⲉ</em>) à la fin:</p>
+  <p><em>ⲁϥ-ⲥⲉⲗⲥⲉⲗ-ⲡⲉϥ-ⲥⲟ́ⲛ</em> «il a consolé son frère».</p>
+  <p><em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥϩⲓ́ⲙⲓ</em> «femme», <em>ⲥⲱ́ⲛⲓ</em> «sœur».</p>
+  <p>L'<em>ⲉ</em> auxiliaire se change en <em>ⲁ</em> devant <em>ϩ</em> et dans quelques autres cas qu'on verra plus loin (210):</p>
+  <p><em>ⲁϥ-ⲛⲁϩⲉⲙ-ⲑⲏⲛⲟⲩ</em> «il vous a délivrés».</p>
+  <p>2. En tête des mots, la voyelle auxiliaire <em>ⲉ</em> ne s'écrit généralement pas; elle est indiquée par un accent grave dans les mots qui commencent par <em>ⲙ</em> <em>ⲛ</em>:</p>
+  <p><em>ⲙ̀ⲕⲁϩ</em> = <em>ⲉⲙⲕⲁϩ</em> «douleur»,</p>
+  <p><em>ⲛ̀ϩⲟⲧ</em> = <em>ⲉⲛϩⲟⲧ</em> «être fidèle».</p>
+  <p>On trouve souvent aussi ces mots écrits avec l'<em>ⲉ</em> initial, surtout lorsqu'ils forment la seconde partie d'un mot composé:</p>
+  <p><em>ⲁⲧⲉⲙⲕⲁϩ</em> «sans douleur»;</p>
+  <p><em>ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲛϩⲟⲧ</em> «l'homme fidèle».</p>
+  <p>En Ṣaꜥidique la voyelle auxiliaire <em>ⲉ</em> est le plus souvent indiquée par un trait horizontal: <em>ⲙ̄ⲕⲁϩ</em>, <em>ⲛ̄ϩⲟⲧ</em>.</p>
+  <h3>D. Changements de Lettres.</h3>
+  <h4 class="smallcaps">I. Consonnes.</h4>
+  <h5>1. Chute de consonnes finales.</h5>
 </div>
 	</body>
 </html>
