--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -784,6 +784,20 @@
   <h3>D. Changements de Lettres.</h3>
   <h4 class="smallcaps">I. Consonnes.</h4>
   <h5>1. Chute de consonnes finales.</h5>
+  <p>1. <i>r</i> final dans un mot égyptien a généralement disparu en copte. Les mots terminés en <i>ir</i> ou <i>er</i> présentent la finale <em>ⲓ</em> (S. <em>ⲉ</em>), et ceux en <i>or</i> la finale <em>ⲟ</em>:</p>
+  <p><em>ⲛⲟⲩϥⲓ</em> ég. <i>noúfir</i>,</p>
+  <p><em>ϩⲑⲟ</em> ég. <i>ḥtor</i>,</p>
+  <p><em>ϣⲱⲡⲓ</em> ég. <i>ḫṓpir</i>,</p>
+  <p><em>ϩⲕⲟ</em> ég. <i>ḥqor</i>,</p>
+  <p><em>ⲥⲁϩⲟⲩⲓ</em> ég. <i>soḥwir</i>,</p>
+  <p><em>ϩⲟ</em> ég. <i>ḥor</i>.</p>
+  <p>La lettre radicale <i>r</i> reparaît lorsque le mot s'augmente d'une terminaison (pluriel, pronoms suffixes, féminin):</p>
+  <p><em>ⲛⲟⲩϥⲓ</em> «utile», <em>ⲛⲟϥⲣⲓ</em> «utilité» (en ég. c'était le féminin);</p>
+  <p><em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ⲁϥ-ⲥϩⲟⲩⲱⲣ-ϥ</em> «il l'a maudit»;</p>
+  <p><em>ϩⲑⲟ</em> «cheval», pl. <em>ϩⲑⲱⲣ</em>;</p>
+  <p><em>ϩⲕⲟ</em> «avoir faim», qualitatif (199), <em>ϩⲟⲕⲉⲣ</em>;</p>
+  <p><em>ϩⲟ</em> «face», <em>ϩⲣⲁϥ</em> «sa face».</p>
+  <p>De même <em>ⲉ</em> (ég. <i>er</i>) «à», <em>ⲉⲣⲟϥ</em> «à lui».</p>
 </div>
 	</body>
 </html>
