--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -798,6 +798,39 @@
   <p><em>ϩⲕⲟ</em> «avoir faim», qualitatif (199), <em>ϩⲟⲕⲉⲣ</em>;</p>
   <p><em>ϩⲟ</em> «face», <em>ϩⲣⲁϥ</em> «sa face».</p>
   <p>De même <em>ⲉ</em> (ég. <i>er</i>) «à», <em>ⲉⲣⲟϥ</em> «à lui».</p>
+  <p>2. <i>t</i> final dans un mot égyptien est généralement tombé en copte après une voyelle auxiliaire. Le mot copte se termine en <em>ⲓ</em> (S. <em>ⲉ</em>) dans les polysyllabes, en <em>ⲉ</em> dans les monosyllabes:</p>
+  <p><em>ⲣⲱϧⲓ</em> «laver» ég. <i>rṓḫit</i>; <em>ⲫⲉ</em> «ciel» ég. <i>pet</i>.</p>
+  <p>Régulièrement a disparu aussi le <i>t</i> de la terminaison du féminin singulier (<i>it</i>) et du fém. pluriel (<i>wit</i>)<sup class="footnote">1</sup>:</p>
+  <p><em>ⲥⲱⲛⲓ</em> ég. <i>sṓnit</i>,</p>
+  <p><em>ⲛⲟϥⲣⲓ</em> ég. <i>nófrit</i>,</p>
+  <p><em>ⲥϩⲓⲙⲓ</em> ég. <i>ḥī́mit</i>,</p>
+  <p><em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i>,</p>
+  <p><em>ⲫⲏⲟⲩⲓ</em> ég. <i>pḗwit</i>, pluriel de <em>ⲫⲉ</em> «ciel».</p>
+  <h5>2. Changements de consonnes.</h5>
+  <p>1. Devant les consonnes <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et les semi-consonnés <em>ⲓ</em> <em>ⲟⲩ</em>, les trois fortes <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em> se changent en leurs aspirées correspondantes <em>ⲫ</em> <em>ⲭ</em> <em>ⲑ</em>:</p>
+  <p><em>ⲫⲣⲏ</em> «le soleil» = <em>ⲡ</em> article + <em>ⲣⲏ</em>;</p>
+  <p><em>ⲑⲙⲁⲩ</em> «la mère» = <em>ⲧ</em> article + <em>ⲙⲁⲩ</em>;</p>
+  <p><em>ⲭⲟⲩⲁⲃ</em> «tu es saint» = <em>ⲕ</em> + <em>ⲟⲩⲁⲃ</em>.</p>
+  <p>Cette règle souffre beaucoup d'exceptions surtout en ce qui concerne <em>ⲭ</em> et <em>ⲑ</em>.</p>
+  <p>Dans les mêmes cas <em>ϫ</em> se change en <em>ϭ</em>:</p>
+  <p><em>ϭⲛⲟⲛ</em> «être tendre», tandis que le qualitatif est <em>ϫⲏⲛ</em>.</p>
+  <p>2. Les mêmes lettres <em>ⲡ</em> <em>ⲕ</em> <em>ⲧ</em>, représentant les lettres égyptiennés <i>p</i> <i>k</i> <i>t</i>, se changent encore en leurs aspirées correspondantes quand elles sont placées devant une voyelle accentuée:</p>
+  <p><em>ⲭⲏ́ⲙⲓ</em> ég. <i>kḗmit</i> «l'Egypte»;</p>
+  <p><em>ⲫⲁ́ⲓ</em>, <em>ⲑⲁ́ⲓ</em> «celui-ci, celle-ci»; mais <em>ⲡⲁⲓ</em>, <em>ⲧⲁⲓ</em> «ce, cette», sans accent;</p>
+  <p><em>ϣⲑⲟ́ⲣⲧⲉⲣ</em>, <em>ϣⲧⲉⲣⲑⲱ́ⲣ⸗</em> «troubler»; <em>ⲙ̀ⲫⲱ́ⲣ</em>, <em>ⲙ̀ⲡⲉⲣ-</em> «non».</p>
+  <p>Mais lorsque la voyelle n'est pas accentuée ou cesse de l'être, elles restent sans changement:</p>
+  <p class="footnote">1. Voir § 13 <i>note</i>.</p>
+  <p><em>ⲃⲁ́ⲕⲓ</em> ég. <i>bákit</i> «ville», <em>ⲣⲟⲙⲡⲓ</em> ég. <i>rónpit</i> «année».</p>
+  <p>Voyez l'exemple de <em>ϣⲑⲟⲣⲧⲉⲣ</em>.</p>
+  <p>3. Lorsque <em>ⲕ</em> <em>ⲧ</em> représentent les lettres égyptiennes <i>q</i> (<em>ق</em>), <i>d</i>, elles ne changent pas, même devant une voyelle accentuée:</p>
+  <p><em>ⲕⲟϩ</em> angle,</p>
+  <p><em>ⲕⲁⲥ</em> os,</p>
+  <p><em>ⲧⲉⲛϩ</em> aile,</p>
+  <p><em>ⲧⲏⲃ</em> doigt.</p>
+  <p>4. La lettre égyptienne <i>r</i> s'est quelquefois changée en <em>ⲓ</em>, ainsi <em>ⲕⲁⲓⲥⲓ</em> «sépulture» dérive de <i>krst</i> (<i>karsit</i>). Le verbe <em>ⲓⲣⲓ</em> «faire» donne à l'état pronominal (35) <em>ⲁⲓ⸗</em> au lieu de (<em>ⲁⲣ⸗</em>) et au qualitatif <em>ⲟⲓ</em> au lieu de (<em>ⲟⲣⲓ</em>). On a de même <em>ⲙⲉⲓ</em> «aimer» de l'ég. <i>mryt</i> (<i>meryt</i>); dans ce même mot, <i>r</i> reparaît aux autres formes <em>ⲙⲉⲛⲣⲉ-</em> <em>ⲙⲉⲛⲣⲓⲧ⸗</em> (S. <em>ⲙⲉⲣⲉ-</em> <em>ⲙⲉⲣⲓⲧ⸗</em>).</p>
+  <p>5. Devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>, <em>ⲛ</em> se change régulièrement en <em>ⲙ</em><sup class="footnote">1</sup>:</p>
+  <p><em>ⲟⲩⲛⲓϣϯ ⲙ̀-ⲃⲁⲕⲓ</em> une grande ville,</p>
+  <p>mais on dira <em>ⲟⲩⲛⲓϣϯ ⲛ̀-ⲣⲱⲙⲓ</em> un grand homme.</p>
 </div>
 	</body>
 </html>
