--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -831,6 +831,63 @@
   <p>5. Devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲡ</em> <em>ⲫ</em> <em>ⲯ</em>, <em>ⲛ</em> se change régulièrement en <em>ⲙ</em><sup class="footnote">1</sup>:</p>
   <p><em>ⲟⲩⲛⲓϣϯ ⲙ̀-ⲃⲁⲕⲓ</em> une grande ville,</p>
   <p>mais on dira <em>ⲟⲩⲛⲓϣϯ ⲛ̀-ⲣⲱⲙⲓ</em> un grand homme.</p>
+  <p>6. Dans quelques mots on ajoute parfois un <em>ϩ</em> final sans changement de sens:</p>
+  <p><em>ϫⲱⲗ</em> <em>ϫⲱⲗϩ</em> «revêtir»; <em>ϭⲟ</em> <em>ϭⲟϩ</em> «dépenser».</p>
+  <h3 class="smallcaps">II. Changements de voyelles.</h3>
+  <h4>1. Sous l'influence d'une consonne qui précède.</h4>
+  <p>Les consonnes <em>ⲙ</em> <em>ⲛ</em> exigent après elles le changement de <em>ⲱ</em> en <em>ⲟⲩ</em>: <em>ⲛⲟⲩⲕ</em> «les tiens» et non <em>ⲛⲱⲕ</em> comme les formes similaires <em>ⲫⲱⲕ</em>, <em>ⲑⲱⲕ</em> «le tien, la tienne»; <em>ⲙⲟⲩⲣ</em> «lier», <em>ⲛⲟⲩⲧ</em> «moudre»; ces mots devraient selon la règle générale avoir un <em>ⲱ</em> comme les autres verbes bilitères <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>, etc.</p>
+  <p class="footnote">1. Dans un manuscrit de Turin, ce changement n'a pas toujours lieu; on y lit <em>ⲛ̀ⲙⲟⲓ</em>, <em>ⲛ̀ⲙⲱⲟⲩ</em>, <em>ⲛ̀ⲡⲉ</em> au lieu de <em>ⲙ̀ⲙⲟⲓ</em>, <em>ⲙ̀ⲙⲱⲟⲩ</em>, <em>ⲙ̀ⲡⲉ</em>, mais ce n'est là qu'une exception. Cf. Fr. Rossi, <i>Cinque manoscritti copti della Biblioteca nazionale di Torino</i>.</p>
+  <p><i>Exception</i>: Devant <em>ⲟⲩ</em> et <em>ⲧⲉⲛ</em> à l'intérieur ou à la fin du mot, <em>ⲱ</em> se maintient; cependant <em>ⲟⲩ</em> reste dans le pronom <em>ⲛⲟⲩ⸗</em> (86):</p>
+  <p><em>ⲉⲣⲙⲱⲟⲩⲓ</em> larmes,</p>
+  <p><em>ⲛⲉⲙⲱⲧⲉⲛ</em> avec vous,</p>
+  <p><em>ⲛⲱⲟⲩ</em> à eux,</p>
+  <p><em>ⲛⲱⲧⲉⲛ</em> à vous.</p>
+  <p>Le même changement de <em>ⲱ</em> en <em>ⲟⲩ</em> a eu lieu quelquefois après <em>ϣ</em> et <em>ϫ</em>: <em>ϣⲟⲩϣⲧ</em> «trou», <em>ϫⲟⲩϣⲧ</em> «regarder».</p>
+  <h4>2. Sous l'influence d'une lettre qui suit.</h4>
+  <p>1. Devant <em>ϩ</em> <em>ϧ</em> et <em>ϣ</em> représentant la lettre égyptienne <i>ḫ</i> = <em>خ</em>, <em>ⲟ</em> se change en <em>ⲁ</em>:</p>
+  <p><em>ⲁϥ-ⲙⲁϩ-ϥ</em> il l'a rempli;</p>
+  <p><em>ⲁϥ-ⲫⲁϧ-ϥ</em> il l'a fendu;</p>
+  <p><em>ⲁϥ-ⲃⲁϣ-ϥ</em> il l'a dépouillé.</p>
+  <p>Selon la règle générale des verbes bilitères, ces formes devraient avoir un <em>ⲟ</em>:</p>
+  <p><em>ⲁϥ-ⲃⲟⲗ-ϥ</em> «il l'a délié», <em>ⲁϥ-ⲕⲟⲧ-ϥ</em> «il l'a construit».</p>
+  <p>2. Devant <em>ϩ</em>, dans la même syllabe, <em>ⲱ</em> se change en <em>ⲟ</em>, <em>ⲏ</em> en <em>ⲉ</em>: <em>ⲙⲟϩ</em> «remplir» et non <em>ⲙⲱϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲱⲧ</em>; <em>ⲙⲉϩ</em> «rempli» et non <em>ⲙⲏϩ</em>, comme <em>ⲃⲱⲗ</em>, <em>ⲕⲏⲧ</em>.</p>
+  <p>Mais on a <em>ⲑⲱ-ϩⲉⲙ</em> «appeler», <em>ⲟⲩⲱ-ϩⲉⲙ</em> «répéter».</p>
+  <p>Devant l'ancienne consonne <i>ꜥ</i> (aïn) qui a complètement disparu en copte, <em>ⲟ</em> s'est généralement changé en <em>ⲁ</em>: <em>ⲟⲩⲁⲃ</em> (en ég. <i>woꜥb</i>) «être pur»; de même <em>ⲉ</em> dans les syllabes <i>ouvertes</i>: <em>ⲓⲁ</em> (en ég. <i>yeꜥ</i>) «laver»; dans les syllabes <i>fermées</i> il se maintient plutôt: <em>ϣⲉⲧ</em> de l'ég. <i>sheꜥd</i> «immoler».</p>
+  <p>En Boḥairique, lorsque <em>ⲟ</em> doit se trouver devant <em>ⲟⲩ</em>, il se change en <em>ⲱ</em>: <em>ⲉⲣⲟⲕ</em> «vers toi», <em>ⲉⲣⲱⲟⲩ</em> «vers eux».</p>
+  <p><em>ⲉⲣⲟⲩⲟⲧ</em> «être joyeux», qual. <em>ⲣⲱⲟⲩⲧ</em> (pour <em>ⲣⲟⲟⲩⲧ</em> S).</p>
+  <p>Il n'y a d'exception que pour <em>ⲉϩⲟⲟⲩ</em> «jour», son dérivé <em>ⲙ̀ⲫⲟⲟⲩ</em> «aujourd'hui» et <em>ⲧⲟⲟⲩⲓ</em> «matin».</p>
+  <p>Le Ṣaꜥidique retient <em>ⲟ</em>; on a donc B. <em>-ⲱⲟⲩ</em> = S. <em>-ⲟⲟⲩ</em>.</p>
+  <p>E. Des Trois États et des Trois Formes.</p>
+  <p>I. Définitions.</p>
+  <p>De ce qui précède et surtout des paragraphes 14, 15, 17, 18, il ressort qu'un même mot peut avoir trois formes, selon qu'il se trouve dans trois états différents.</p>
+  <p>1. Etat absolu, forme pleine.</p>
+  <p>On appelle <i>état absolu</i> l'état d'un mot <i>phonétiquement</i> indépendant de tout autre, c'est-à-dire séparé, dans la prononciation, des mots qui le suivent; dans ce cas il porte toujours l'accent tonique et revêt sa <i>forme pleine</i>: <em>ⲣⲱ́ⲙⲓ</em>, <em>ⲥⲟ́ⲗⲥⲉⲗ</em>, <em>ⲃⲱ́ⲗ</em>.</p>
+  <p>2. Etat construit, forme abrégée.</p>
+  <p>On appelle <i>état construit</i> l'état d'un mot intimement uni à son complément, de sorte qu'il n'y ait pour les deux qu'un seul accent tonique placé sur le dernier; il prend alors une <i>forme abrégée</i>, où ne se trouvent que des voyelles auxiliaires.</p>
+  <p>Par convention, les grammairiens modernes indiquent cette forme au moyen d'un trait d'union <em>-</em>: <em>ⲣⲉⲙ-</em>, <em>ⲥⲉⲗⲥⲉⲗ-</em>, <em>ⲃⲉⲗ-</em>.</p>
+  <p>3. Etat pronominal, forme avec suffixes.</p>
+  <p>Enfin un mot est à <i>l'état pronominal</i> lorsqu'il est suivi des pronoms affixes; il revêt alors sa <i>forme avec suffixes</i>.</p>
+  <p>Cette forme est accentuée; elle se distingue de la forme pleine par la voyelle formative; celle-ci, en effet, dans la forme avec suffixes, change de quantité (17, 18) et recule souvent d'une syllabe (14). Par convention, on indique la forme avec suffixes au moyen de deux traits relevés: <em>ⲥⲉⲗⲥⲱ́ⲗ⸗</em>, <em>ⲃⲟ́ⲗ⸗</em>.</p>
+  <p>Cette troisième forme, augmentée des suffixes personnels, peut encore être traitée comme forme pleine et comme forme abrégée, c'est-à-dire qu'elle ne porte pas toujours nécessairement l'accent tonique. Ceci a lieu dans les adjectifs et pronoms possessifs. Ainsi on a <em>ⲡⲉϥ-</em> «son» et <em>ⲫⲱ́ϥ</em> (24) «le sien»; <em>ⲡⲉϥ-</em> est la forme abrégée de <em>ⲫⲱϥ</em>. De même <em>ⲧⲉϥ-</em> «sa» et <em>ⲑⲱ́ϥ</em> (24) «la sienne»; <em>ⲛⲉϥ-</em> «ses» et <em>ⲛⲟⲩ́ϥ</em> (29) «les siens». Tous les verbes auxiliaires sont dans ce cas, avec cette différence qu'ils n'ont pas de forme pleine: <em>ⲛⲁⲣⲉ-</em> <em>ⲛⲁϥ-</em>; <em>ⲙⲁⲣⲉ-</em> <em>ⲙⲁⲣⲉϥ-</em>; <em>ⲁϥⲑⲣⲉϥ-</em> au lieu de <em>ⲁϥⲑⲣⲟ́ϥ</em>, <i>cf.</i> <em>ⲁϥⲧⲁⲗⲟϥ</em>.</p>
+  <p>Nous indiquerons ces formes avec suffixes, abrégées, au moyen du double signe <em>⸗-</em>: <em>ⲛ⸗-</em> sera l'adjectif possessif (74), <em>ⲛ⸗</em> la particule accentuée <em>ⲛⲏ́ⲓ</em> <em>ⲛⲁ́ⲕ</em> etc. «à moi, à toi» (61); <em>ⲛ̀ⲧ⸗-</em> sera l'auxiliaire du subjonctif <em>ⲛ̀ⲧⲁ-</em> <em>ⲛ̀ⲧⲉⲕ</em> etc.; <em>ⲛ̀ⲧ⸗</em>, la particule du génitif <em>ⲛ̀ⲧⲏ́ⲓ</em> <em>ⲛ̀ⲧⲁ́ⲕ</em> etc. (61).</p>
+  <p>II. Importance des trois formes.</p>
+  <p>La morphologie copte repose en grande partie sur l'emploi de ces trois formes. Elles s'étendent à presque toutes les parties du discours: articles, pronoms, noms, verbes, prépositions. Mais c'est dans les verbes qu'elles jouent le rôle le plus considérable. On les étudiera toutes en leur place; il suffira ici de faire quelques remarques générales.</p>
+  <p>I. Les trois formes ne se retrouvent pas nécessairement dans <i>tous les mots</i> coptes. Beaucoup de noms et plusieurs verbes n'ont que la forme pleine: <em>ⲛⲟⲩϯ</em> «Dieu», <em>ⲛⲁⲩ</em> «voir».</p>
+  <p>Un grand nombre de mots n'ont que deux formes, soit la forme pleine et la forme abrégée, comme plusieurs noms; soit la forme abrégée et la forme avec suffixes, comme la plupart des prépositions: <em>ⲣⲱ́ⲙⲓ</em> <em>ⲣⲉⲙ-</em> «homme», <em>ⲛⲏ́ⲃ</em> <em>ⲛⲉⲃ-</em> «maître»; <em>ⲉϫⲉⲛ-</em> <em>ⲉϫⲱ⸗</em> «sur», <em>ϩⲓⲧⲉⲛ-</em> <em>ϩⲓⲧⲟⲧ⸗</em> «par».</p>
+  <p>Les trois formes ne sont pas nécessairement différentes l'une de l'autre. La forme pleine est parfois semblable à la forme avec suffixes: <em>ⲧⲁⲛϧⲟ́</em> <em>ⲧⲁⲛϧⲟ́⸗</em> «vivifier». Elle coïncide rarement avec la forme abrégée: <em>ϯ</em> <em>ϯ-</em> «donner». La forme abrégée peut aussi être la même que la forme avec suffixes: <em>ⲥⲟⲩⲉⲛ-</em> <em>ⲥⲟⲩⲉⲛ⸗</em> «prix».</p>
+  <p>F. Abréviations Usuelles.</p>
+  <p>Il est un certain nombre d'abréviations usitées par les Coptes eux-mêmes dans les manuscrits et par les modernes dans les éditions imprimées. On en trouvera à la fin de la grammaire le tableau complet. Voici les plus importantes:</p>
+  <p><em>ⲓ︤ⲏ︦ⲥ︥</em> <em>ⲓⲏⲥⲟⲩⲥ</em> Jésus,</p>
+  <p><em>ⲡ︤ⲛ︦ⲁ︥</em> <em>ⲡⲛⲉⲩⲙⲁ</em> esprit,</p>
+  <p><em>ⲭ︤ⲥ︥</em> <em>ⲭⲣⲓⲥⲧⲟⲥ</em> Christ,</p>
+  <p><em>ⲉ︤ⲑ︦ⲩ︥</em> <em>ⲉⲑⲟⲩⲁⲃ</em> saint,</p>
+  <p><em>ⲫϯ</em> <em>ⲫⲛⲟⲩϯ</em> Dieu,</p>
+  <p><em>ⲡϭ︤ⲥ︥</em> <em>ⲡϭⲟⲓⲥ</em> le Seigneur,</p>
+  <p><em>ⲓ︤ⲥ︦ⲗ︥</em> <em>ⲓⲥⲣⲁⲏⲗ</em> Israël,</p>
+  <p><em>ⲓ︤ⲗ︦ⲏ︦ⲙ︥</em> <em>ⲓⲉⲣⲟⲩⲥⲁⲗⲏⲙ</em> Jérusalem.</p>
+  <p>Le mot <em>ⲫϯ</em> ne prend pas le trait horizontal; <em>ⲡⲛⲉⲩⲙⲁ</em> s'écrit <em>ⲡ︤ⲛ︦ⲁ︥</em> même dans les dérivés comme <em>ⲡ︤ⲛ︦ⲁ︥ⲧⲓⲕⲟⲛ</em>, <em>ⲡ︤ⲛ︦ⲁ︥ⲧⲟⲫⲟⲣⲟⲥ</em>. Le mot <em>ⲡϭⲟⲓⲥ</em> est quelquefois écrit <em>ⲡⲟ︤ⲥ︥</em>; c'est une orthographe défectueuse qui provient d'une confusion entre <em>ⲟ</em> et <em>ϭ</em> dont la partie supérieure est reliée au <em>ⲥ</em> dans les manuscrits. (Voir le tableau à la fin de la grammaire.) Le même mot s'écrit aussi <em>ⲡϭⲥ</em> sans le trait horizontal.</p>
+  <hr>
+  <h2>2. Morphologie et Syntaxe.</h2>
 </div>
 	</body>
 </html>
