--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -81,10 +81,10 @@
 			<p>Grammaire.</p>
 			<p>Introduction: la langue copte.</p>
 			<ol>
-			<li>Phonétique <span>7–23</span>
-				<ol>
-				<li>Alphabet. <span>7</span></li>
-				<li>Valeur et prononciation des lettres. <span>8–11</span>
+			   <li><a href="#">Phonétique <span>7–23</span></a>
+				    <ol>
+              <li><a href="#">Alphabet. <span>7</span></a></li>
+              <li><a href="#">Valeur et prononciation des lettres. <span>8–11</span></a>
 					<ol>
 					<li>Consonnes. <span>8</span></li>
 					<li>Voyelles et diphtongues. <span>10</span></li>
