--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -74,61 +74,61 @@
 				<span class="uppercase">Alexis Mallon s. j.</span>
 			</p>
 		</div>
-		<hr>
-		<div>
-			<h2>Table des matières.</h2>
+    <hr>
+    <div>
+      <h2>Table des matières.</h2>
 			<p>Pages</p>
 			<p>Grammaire.</p>
 			<p>Introduction: la langue copte.</p>
 			<ol>
-			   <li><a href="#">Phonétique <span>7–23</span></a>
-				    <ol>
-              <li><a href="#">Alphabet. <span>7</span></a></li>
-              <li><a href="#">Valeur et prononciation des lettres. <span>8–11</span></a>
-					<ol>
-					<li>Consonnes. <span>8</span></li>
-					<li>Voyelles et diphtongues. <span>10</span></li>
-					</ol>
-				</li>
-				<li>Des syllabes. <span>11–16</span>
-					<ol>
-					<li>Des syllabes en elles-mêmes. <span>12</span></li>
-					<li>Des syllabes dans les mots. <span>12</span></li>
-					<li>Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span>
-						<ol>
-						<li>Voyelle formative. <span>14</span></li>
-						<li>Voyelles auxiliaires. <span>15</span></li>
-						</ol>
-					</li>
-					</ol>
-				</li>
-				<li>Changements de lettres. <span>16–20</span>
-					<ol>
-					<li>Consonnes. <span>16–18</span>
-						<ol>
-						<li>Chute de consonnes finales. <span>16</span></li>
-						<li>Changements de consonnes. <span>17</span></li>
-						</ol>
-					</li>
-					<li>Voyelles. <span>18–20</span>
-						<ol>
-						<li>Sous l'influence d'une consonne qui précède. <span>18</span></li>
-						<li>Sous l'influence d'une lettre qui suit. <span>19</span></li>
-						</ol>
-					</li>
-					</ol>
-				</li>
-				<li>Des trois états et des trois formes. <span>20–22</span>
-					<ol>
-					<li>Définitions. <span>20</span></li>
-					<li>Importance. <span>21</span></li>
-					</ol>
-				</li>
-				<li>Abréviations usuelles. <span>22–23</span></li>
-				</ol>
-			</li>
-			<li>Morphologie et syntaxe.
-				<ol>
+        <li><a href="#">Phonétique <span>7–23</span></a>
+          <ol>
+            <li><a href="#">Alphabet. <span>7</span></a></li>
+            <li><a href="#">Valeur et prononciation des lettres. <span>8–11</span></a>
+              <ol>
+                <li><a href="#">Consonnes. <span>8</span></a></li>
+                <li><a href="#">Voyelles et diphtongues. <span>10</span></a></li>
+              </ol>
+            </li>
+            <li><a href="#">Des syllabes. <span>11–16</span></a>
+              <ol>
+                <li><a href="#">Des syllabes en elles-mêmes. <span>12</span></a></li>
+                <li><a href="#">Des syllabes dans les mots. <span>12</span></a></li>
+                <li><a href="#">Nature et quantité de la voyelle formative et des voyelles auxiliaires. <span>14</span></a>
+                  <ol>
+                    <li><a href="#">Voyelle formative. <span>14</span></a></li>
+                    <li><a href="#">Voyelles auxiliaires. <span>15</span></a></li>
+                  </ol>
+                </li>
+              </ol>
+            </li>
+            <li><a href="#">Changements de lettres. <span>16–20</span></a>
+              <ol>
+                <li><a href="#">Consonnes. <span>16–18</span></a>
+                  <ol>
+                    <li><a href="#">Chute de consonnes finales. <span>16</span></a></li>
+                    <li><a href="#">Changements de consonnes. <span>17</span></a></li>
+                  </ol>
+                </li>
+                <li><a href="#">Voyelles. <span>18–20</span></a>
+                  <ol>
+                    <li><a href="#">Sous l'influence d'une consonne qui précède. <span>18</span></a></li>
+                    <li><a href="#">Sous l'influence d'une lettre qui suit. <span>19</span></a></li>
+                  </ol>
+                </li>
+              </ol>
+            </li>
+            <li><a href="#">Des trois états et des trois formes. <span>20–22</span></a>
+              <ol>
+                <li><a href="#">Définitions. <span>20</span></a></li>
+                <li><a href="#">Importance. <span>21</span></a></li>
+              </ol>
+            </li>
+            <li><a href="#">Abréviations usuelles. <span>22–23</span></a></li>
+          </ol>
+        </li>
+        <li>Morphologie et syntaxe.
+          <ol>
 				<li><i>Articles et pronoms.</i>
 					<ul>
 					<li>Chap. I. De l'article. <span>24–30</span>
