--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -633,9 +633,10 @@
     </tr>
   </table>
   <p>Les sept dernières lettres sont des caractères démotiques qui dérivent eux-mêmes des hiéroglyphes:</p>
-  <table>
+  <div class="abc"><img src="https://randykomforty.github.io/coptic/mallon/images/mallon_demotic_evolution.png" alt=""></div>
+  <!--<table>
     <tr>
-      <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
+      <td><img class="abc" src="https://randykomforty.github.io/coptic/mallon/images/mallon_demotic_evolution.png" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
     </tr>
     <tr>
       <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
@@ -655,7 +656,7 @@
     <tr>
       <td><img src="" alt=""> = <img src="" alt=""> = <img src="" alt=""></td>
     </tr>
-  </table>
+  </table>-->
   <p>Les lettres <em>ⲅ</em> <em>ⲇ</em> <em>ⲍ</em> ne sont employées que dans les mots grecs<sup class="footnote">1</sup>. Lorsque <em>ⲝ</em> et <em>ⲯ</em> font partie d'un mot copte, ils sont une contraction de <em>ⲕⲥ</em>, <em>ⲡⲥ</em>: <em>ⲝⲟⲗⲥⲉⲗ</em> = <em>ⲕⲥⲟⲗⲥⲉⲗ</em>, <em>ⲯⲁⲓ</em> = <em>ⲡⲥⲁⲓ</em>.</p>
   <p>Quelquefois aussi les lettres <em>ⲑ</em> <em>ⲫ</em> <em>ⲭ</em> remplacent <em>ⲧϩ</em>, <em>ⲡϩ</em>, <em>ⲕϩ</em> par ex. <em>ⲑⲉⲙⲥⲟ</em> = <em>ⲧϩⲉⲙⲥⲟ</em>. Mais généralement ce sont des lettres simples en boḥairique.</p>
   <p>Les lettres <em>ⲓ</em> et <em>ⲟⲩ</em> peuvent être de simples voyelles comme en arabe <em>ﹺ</em> et <em>ﹸ</em> ou bien les semi-consonnes y (<em>ي</em>), w (<em>و</em>). Dans ce dernier cas, on les appelle aussi, comme en arabe, lettres faibles.</p>
