--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -889,6 +889,53 @@
   <p>Le mot <em>ⲫϯ</em> ne prend pas le trait horizontal; <em>ⲡⲛⲉⲩⲙⲁ</em> s'écrit <em>ⲡ︤ⲛ︦ⲁ︥</em> même dans les dérivés comme <em>ⲡ︤ⲛ︦ⲁ︥ⲧⲓⲕⲟⲛ</em>, <em>ⲡ︤ⲛ︦ⲁ︥ⲧⲟⲫⲟⲣⲟⲥ</em>. Le mot <em>ⲡϭⲟⲓⲥ</em> est quelquefois écrit <em>ⲡⲟ︤ⲥ︥</em>; c'est une orthographe défectueuse qui provient d'une confusion entre <em>ⲟ</em> et <em>ϭ</em> dont la partie supérieure est reliée au <em>ⲥ</em> dans les manuscrits. (Voir le tableau à la fin de la grammaire.) Le même mot s'écrit aussi <em>ⲡϭⲥ</em> sans le trait horizontal.</p>
   <hr>
   <h2>2. Morphologie et Syntaxe.</h2>
+  <hr>
+  <h3>I. Articles et Pronoms.</h3>
+  <h4>Chaptire I. De l'Article.</h4>
+  <h5>A. Formes.</h5>
+  <p>Il y a en copte deux articles: l'article défini et l'article indéfini.</p>
+  <h6>I. Article défini.</h6>
+  <p>L'article défini se divise en faible et en fort:</p>
+  <table>
+    <tr>
+      <th>Singulier.</th><th></th><th></th><th></th><th>Pluriel.</th><th></th>
+    </tr>
+    <tr>
+      <td></td><td>faible</td><td>fort</td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>masc.</td><td><em>ⲡ</em> <em>ⲫ</em></td><td><em>ⲡⲓ</em></td><td>le</td><td><em>ⲛⲓ</em> <em>ⲛⲉⲛ</em></td><td>les</td>
+    </tr>
+    <tr>
+      <td>fém.</td><td><em>ⲧ</em> <em>ⲑ</em></td><td><em>ϯ</em></td><td>la</td><td></td><td></td>
+    </tr>
+  </table>
+  <p><em>ⲫ</em> et <em>ⲑ</em> s'emploient au lieu de <em>ⲡ</em> <em>ⲧ</em> devant les lettres <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et quelquefois devant <em>ⲓ</em> <em>ⲟⲩ</em>.</p>
+  <p>L'article faible détermine d'une manière moins précise; il se place devant les noms génériques ou abstraits et devant les noms d'êtres uniques.</p>
+  <p>L'article fort <em>ⲡⲓ</em> <em>ϯ</em> détermine avec plus de précision, il indique un individu en particulier.</p>
+  <table>
+    <tr>
+      <th>Article faible.</th><th></th><th>Article fort.</th><th></th>
+    </tr>
+    <tr>
+      <td><em>ⲫ-ⲛⲟⲩϯ</em></td><td>Dieu,</td><td><em>ⲡⲓ-ⲛⲟⲩϯ</em></td><td>le dieu;</td>
+    </tr>
+    <tr>
+      <td><em>ⲧ-ⲫⲉ</em></td><td>le ciel,</td><td><em>ϯ-ⲫⲉ ⲙ̀ⲃⲉⲣⲓ</em></td><td>le ciel nouveau<sup class="footnote">1</sup>;</td>
+    </tr>
+    <tr>
+      <td><em>ⲫ-ⲣⲏ</em></td><td>le soleil,</td><td><em>ⲡⲓ-ⲣⲏ ⲛ̀ⲧⲉ ϯ-ⲙⲉⲑⲙⲏⲓ</em></td><td>le Soleil de Justice<sup class="footnote">1</sup>.</td>
+    </tr>
+  </table>
+  <p>En général on emploie l'un ou l'autre article selon le degré de détermination qu'on veut donner au nom.</p>
+  <p><i>Remarques.</i></p>
+  <p>1. Les mots qui commencent par <em>ⲁ</em> prennent généralement l'article <em>ⲡⲓ</em> et ceux qui commencent par <em>ⲟⲩ</em>, <em>ⲱ</em>, l'article <em>ⲡ</em>: <em>ⲡⲓ-ⲁⲥⲉⲃⲏⲥ</em> «l'impie», <em>ⲡⲓ-ⲁⲧϩⲏⲧ</em> «l'insensé», <em>ⲡ-ⲟⲩⲣⲟ</em> «le roi», <em>ⲡ-ⲱⲛϧ</em> «la vie».</p>
+  <p>2. Pour éviter toute équivoque on dit:</p>
+  <p><em>ⲫ-ⲓⲱⲧ</em> «le père», <em>ⲡ-ⲓⲱⲧ</em> «l'orge»;</p>
+  <p><em>ⲫ-ⲓⲟⲙ</em> «la mer», <em>ⲡ-ⲓⲟⲙ</em> «le récipient du pressoir».</p>
+  <p>L'article <em>ⲛⲉⲛ</em> ne s'emploie que devant un nom mis en annexion, <em>ⲛⲓ</em> peut être usité partout:</p>
+  <p><em>ⲛⲉⲛ-ϣⲏⲣⲓ ⲙ̀ⲡⲓ︤ⲥ︦ⲗ︥</em> «les fils d'Israël»;</p>
+  <p><em>ⲛⲉⲛ-ⲙⲱⲓⲧ ⲙ̀ⲫⲣⲱⲙⲓ</em> «les voies de l'homme»<sup class="footnote">2</sup>.</p>
 </div>
 	</body>
 </html>
