--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -961,6 +961,11 @@
   <p class="footnote">2. Jean 1, 46.</p>
   <p class="footnote">3. Kef. 355.</p>
   <p class="footnote">4. AM. 17, 20.</p>
+  <p><em>ⲣⲁϣⲓ ⲧ-ϣⲉⲣⲓ ⲛ̀ⲥⲓⲱⲛ</em> «réjouis-toi, fille de Sion»<sup class="footnote">1</sup>.</p>
+  <p><em>ⲁⲙⲏ ⲉⲡⲉⲥⲏⲧ ϯ-ⲡⲁⲣⲑⲉⲛⲟⲥ ⲧ-ϣⲉⲣⲓ ⲙ̀ⲃⲁⲃⲩⲗⲱⲛ</em> «descends, o vierge, fille de Babylone»<sup class="footnote">2</sup>.</p>
+  <p><em>ⲱ ⲡϭ︤ⲥ︥ ⲛⲟϩⲉⲙ ⲛ̀ⲧⲁⲯⲩⲭⲏ</em> «Seigneur, sauve mon âme»<sup class="footnote">3</sup>.</p>
+  <p>On dit régulièrement avec l'article défini <em>ⲫ-ⲛⲟⲩϯ</em> «Dieu». Les autres noms propres ne prennent généralement pas d'article. On trouve cependant quelques noms de lieu avec l'article défini:</p>
+  <p><em>ⲃⲁⲃⲩⲗⲱⲛ</em> et <em>ⲑ-ⲃⲁⲃⲩⲗⲱⲛ</em> «Babylone», <em>ⲧ-ⲕⲁⲛⲁ</em> «Cana»<sup class="footnote">4</sup>, <em>ⲑ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">5</sup> et <em>ϯ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">6</sup> «Bassan»<sup class="footnote">7</sup>.</p>
 </div>
 	</body>
 </html>
