--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -966,6 +966,25 @@
   <p><em>ⲱ ⲡϭ︤ⲥ︥ ⲛⲟϩⲉⲙ ⲛ̀ⲧⲁⲯⲩⲭⲏ</em> «Seigneur, sauve mon âme»<sup class="footnote">3</sup>.</p>
   <p>On dit régulièrement avec l'article défini <em>ⲫ-ⲛⲟⲩϯ</em> «Dieu». Les autres noms propres ne prennent généralement pas d'article. On trouve cependant quelques noms de lieu avec l'article défini:</p>
   <p><em>ⲃⲁⲃⲩⲗⲱⲛ</em> et <em>ⲑ-ⲃⲁⲃⲩⲗⲱⲛ</em> «Babylone», <em>ⲧ-ⲕⲁⲛⲁ</em> «Cana»<sup class="footnote">4</sup>, <em>ⲑ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">5</sup> et <em>ϯ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">6</sup> «Bassan»<sup class="footnote">7</sup>.</p>
+  <p>3. Article indéfini seul.</p>
+  <p>Outre les cas du § 46, l'article indéfini s'emploie:</p>
+  <p>1. Dans un sens partitif comme l'article partitif français <i>du</i>, <i>des</i>: <em>ⲟⲩ-ⲛⲟⲩⲃ ⲛⲉⲙ ⲟⲩ-ⲗⲓⲃⲁⲛⲟⲥ ⲛⲉⲙ ⲟⲩ-ϣⲁⲗ</em> «de l'or, de l'encens et de la myrrhe»<sup class="footnote">8</sup>.</p>
+  <p>2. Avec les noms abstraits et génériques; il se traduit alors en français par l'article défini:</p>
+  <p><em>ⲟⲩ-ⲣⲁⲙⲁⲟ ⲛⲉⲙ ⲟⲩ-ϩⲏⲕⲓ</em> «le riche et le pauvre»;</p>
+  <p><em>ⲟⲩ-ⲥⲟⲫⲓⲁ ⲛⲉⲙ ⲟⲩ-ⲥⲃⲱ</em> «la sagesse et la science»<sup class="footnote">9</sup>.</p>
+  <p>3. Dans les expressions adverbiales comme:</p>
+  <p><em>ϧⲉⲛ ⲟⲩ-ⲥⲱⲟⲩⲧⲉⲛ</em> «avec droiture»;</p>
+  <p><em>ϧⲉⲛ ⲟⲩ-ⲙⲉⲧⲟϫⲓ</em> «avec iniquité»<sup class="footnote">10</sup>.</p>
+  <p class="footnote">1. Zach. 2, 10.</p>
+  <p class="footnote">2. Is. 47, 1.</p>
+  <p class="footnote">3. Ps. 114, 5.</p>
+  <p class="footnote">4. Jean 2, 1.</p>
+  <p class="footnote">5. Deut. 3, 3.</p>
+  <p class="footnote">6. <i>Ibid.</i> 13.</p>
+  <p class="footnote">7. Cf. AB. 54, 55.</p>
+  <p class="footnote">8. Mt. 2, 11.</p>
+  <p class="footnote">9. Pr. 1, 2.</p>
+  <p class="footnote">10. Pr. 1, 11.</p>
 </div>
 	</body>
 </html>
