--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -985,6 +985,26 @@
   <p class="footnote">8. Mt. 2, 11.</p>
   <p class="footnote">9. Pr. 1, 2.</p>
   <p class="footnote">10. Pr. 1, 11.</p>
+  <h6>II. Suppression de l'article.</h6>
+  <p>Un substantif ne prend pas d'article:</p>
+  <p>1. Quand il est uni intimement à un autre substantif qui le précède, de manière à ne former avec lui qu'un seul tout, soit que le premier ait <i>la forme abrégée</i> ou <i>la forme pleine</i>:</p>
+  <p><em>ⲡⲓ-ⲛⲉⲃ-ⲏⲓ</em> «le maître de la maison»;</p>
+  <p><em>ⲟⲩ-ⲓⲁϩ-ϫⲱⲓⲧ</em> «une plantation d'oliviers»;</p>
+  <p><em>ⲟⲩ-ⲭⲗⲟⲙ ⲛ̀ⲛⲟⲩⲃ</em> «une couronne d'or».</p>
+  <p>2. Quand il s'unit à un verbe précédent pour former un nom ou un verbe composé:</p>
+  <p><em>ⲙⲁⲥ-ⲛⲟⲩϯ</em> «mère de Dieu»;</p>
+  <p><em>ϯ-ⲱⲟⲩ</em> «glorifier»;</p>
+  <p><em>ⲟⲩⲁⲙ-ⲥⲛⲟϥ</em> «sanguinaire»;</p>
+  <p><em>ⲉⲣ-ⲛⲟⲃⲓ</em> «pécher».</p>
+  <p>3. Un nom indéterminé précédé d'une préposition est quelquefois sans article:</p>
+  <p><em>ⲁϥⲛⲁⲩ ⲉ-ⲣⲁⲥⲟⲩⲓ</em> «il vit un songe»<sup class="footnote">1</sup>.</p>
+  <p><em>ⲉϥⲕⲱϯ ⲛ̀ⲥⲁ ⲱⲓⲕ</em> «cherchant du pain»<sup class="footnote">2</sup>.</p>
+  <p>4. Dans les énumérations de noms, spécialement quand les parties sont unies par <em>ϩⲓ</em>, <em>ⲓⲉ</em>, <em>ⲉⲓⲧⲉ</em>, <em>ⲟⲩⲇⲉ</em>:</p>
+  <p><em>ⲟⲩⲟⲛ ⲛⲓⲃⲉⲛ ⲉⲧⲁϥⲭⲁ ⲥⲟⲛ ⲛ̀ⲥⲱϥ ⲓⲉ ⲥⲱⲛⲓ ⲓⲉ ⲓⲱⲧ ⲓⲉ ⲙⲁⲩ ⲓⲉ ⲥϩⲓⲙⲓ ⲓⲉ ϣⲏⲣⲓ ⲓⲉ ⲓⲟϩⲓ ⲓⲉ ⲏⲓ</em> «quiconque aura quitté son frère ou sa sœur ou son père ou sa mère ou sa femme ou ses enfants ou son champ ou sa maison»<sup class="footnote">3</sup>.</p>
+  <p>5. Devant la <i>forme avec suffixes</i> des substantifs, qu'ils aient les autres formes ou non. La détermination se fait alors par le pronom suffixe qui s'accorde avec le mot mis en annexion. Tels sont:</p>
+  <p class="footnote">1. Jer. 23, 28.</p>
+  <p class="footnote">2. Ps. 36, 25.</p>
+  <p class="footnote">3. Mt. 19, 29.</p>
 </div>
 	</body>
 </html>
