--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1005,6 +1005,33 @@
   <p class="footnote">1. Jer. 23, 28.</p>
   <p class="footnote">2. Ps. 36, 25.</p>
   <p class="footnote">3. Mt. 19, 29.</p>
+  <p><em>ⲁⲩⲣⲏϫ⸗</em> extrémité,</p>
+  <p><em>ⲓⲁⲧ⸗</em> regard,</p>
+  <p><em>ⲕⲉⲛ⸗</em> sein,</p>
+  <p><em>ⲣⲁⲧ⸗</em> pied,</p>
+  <p><em>ⲣⲱ⸗</em> (<em>ⲣⲟ</em>) bouche,</p>
+  <p><em>ⲥⲟⲩⲉⲛ⸗</em> prix,</p>
+  <p><em>ⲧⲟⲧ⸗</em> main,</p>
+  <p><em>ϧⲏⲧ⸗</em> milieu, ventre,</p>
+  <p><em>ϩⲏⲧ⸗</em> bout (de la main, du pied),</p>
+  <p><em>ϩⲑⲏ⸗</em> (<em>ϩⲏⲧ</em>) cœur,</p>
+  <p><em>ϩⲣ⸗</em> (<em>ϩⲟ</em>) face,</p>
+  <p><em>ϫⲱ⸗</em> tête.</p>
+  <p>Ex: <em>ⲣⲱⲟⲩ ⲛ̀ⲛⲓⲁⲥⲉⲃⲏⲥ</em> «la bouche des impies»<sup class="footnote">1</sup> (<i>litt.</i> leur bouche des impies).</p>
+  <p><em>ϩⲏⲧⲥ ⲛ̀ⲧϫⲓϫ</em>: «le bout de la main»<sup class="footnote">2</sup> (<i>litt.</i> son bout de la main).</p>
+  <p>Cette tournure est régulièrement employée dans les prépositions formées de ces mots: <em>ϧⲁ-ⲣⲁⲧϥ ⲙ̀ⲡⲓϣϣⲏⲛ</em> «au pied de l'arbre»<sup class="footnote">3</sup>; <em>ⲉ-ⲧⲟⲧⲟⲩ ⲛ̀ⲛⲉϥϣⲏⲣⲓ</em> «aux mains de ses fils»<sup class="footnote">4</sup>, <em>ϧⲁ-ϫⲱϥ ⲙ̀ⲡⲉϥⲁⲗⲟⲩ</em> «devant son enfant»<sup class="footnote">5</sup>.</p>
+  <p><i>Remarques.</i></p>
+  <p>1. Il ne faut pas confondre <em>ⲣⲟ</em> <em>ⲣⲱ⸗</em> «bouche» et <em>ⲣⲟ</em> <i>pl.</i> <em>ⲣⲱⲟⲩ</em> «porte»; dans ce dernier sens on emploie l'article: <em>ⲛⲓ-ⲣⲱⲟⲩ ⲛ̀ⲧⲉ ⲡⲉⲥⲏⲓ</em> «les portes de sa maison»<sup class="footnote">6</sup>.</p>
+  <p>2. Les trois noms <em>ⲧⲟⲧ⸗</em>, <em>ϩⲣ⸗</em> et <em>ϫⲱ⸗</em> semblent avoir eu une forme abrégée qui s'est conservée dans les prépositions formées de ces mots: <em>ϩⲓ-ⲧⲉⲛ-</em> «par le moyen de», <em>ⲛⲁ-ϩⲣⲉⲛ-</em> «devant», <em>ⲉ-ϫⲉⲛ-</em> «sur».</p>
+  <hr>
+  <p class="footnote">1. Pr. 10, 32.</p>
+  <p class="footnote">2. Lév. 8, 23.</p>
+  <p class="footnote">3. Gen. 18, 8.</p>
+  <p class="footnote">4. Gen. 30, 35.</p>
+  <p class="footnote">5. Gen. 33, 14. Cf. AB. 50.</p>
+  <p class="footnote">6. Pr. 5, 8.</p>
+  <h4>Chapitre II. Pronoms Personnels.</h4>
+  <h5 class="smallcaps">I. Pronoms affixes.</h5>
 </div>
 	</body>
 </html>
