--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1032,6 +1032,30 @@
   <p class="footnote">6. Pr. 5, 8.</p>
   <h4>Chapitre II. Pronoms Personnels.</h4>
   <h5 class="smallcaps">I. Pronoms affixes.</h5>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th></th><th>Plur.</th><th></th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ⲓ</em> <em>ⲧ</em></td><td><em>ي</em></td><td>1.</td><td><em>ⲛ</em></td><td><em>نا</em></td>
+    </tr>
+    <tr>
+      <td>2m.</td><td><em>ⲕ</em></td><td><em>كَ</em></td><td>2.</td><td><em>ⲧⲉⲛ</em></td><td><em>كُم</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><i>rien ou</i> <em>ⲓ</em></td><td><em>كِ</em></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3m.</td><td><em>ϥ</em></td><td><em>ه</em></td><td>3.</td><td><em>ⲟⲩ</em></td><td><em>هم</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲥ</em></td><td><em>ها</em></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>Neutre singulier: <em>ⲥ</em>.</td><td></td><td></td><td></td><td></td><td></td>
+    </tr>
+  </table>
+  <p>Ces pronoms s'ajoutent à l'article (74), aux noms (54), aux verbes (280), aux prépositions, pour indiquer les personnes auxquelles se rapportent ces mots. C'est ce qu'on appelle la <i>suffixation</i>; elle se fait directement, sans intermédiaire, ou au moyen d'une voyelle qui sera indiquée pour chaque classe de mots.</p>
 </div>
 	</body>
 </html>
