--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1056,6 +1056,59 @@
     </tr>
   </table>
   <p>Ces pronoms s'ajoutent à l'article (74), aux noms (54), aux verbes (280), aux prépositions, pour indiquer les personnes auxquelles se rapportent ces mots. C'est ce qu'on appelle la <i>suffixation</i>; elle se fait directement, sans intermédiaire, ou au moyen d'une voyelle qui sera indiquée pour chaque classe de mots.</p>
+  <p>Il importe de remarquer que <em>ⲧ</em> de la première pers. du sing. n'était pas un pronom à l'origine. «En fait, il n'y a qu'un pronom du singulier, <i>i</i>; dans certains mots qui prenaient le suffixe <i>-tou</i>, ainsi <i>tot</i> «la main», <i>tot-tou-i</i>, <i>tot-t-i</i>, «ma main», est devenu <i>tot-t</i>, puis <i>tot</i> par chute de <i>-i</i> final; de même après les thèmes en <i>a</i> final, <i>pa-i</i> «mon», l'<i>i</i> est tombé et le thème est demeuré nu»<sup class="footnote">1</sup>. Dans la suite, <em>ⲧ</em> a été employé comme pronom par les Coptes.</p>
+  <p>La 2 pl. a un pronom d'un fréquent usage <em>-ⲑⲏⲛⲟⲩ</em> qui est toujours régime; c'est une forme pleine, qui exige devant elle une forme abrégée<sup class="footnote">2</sup>.</p>
+  <p class="footnote">1. <i>Maspero, Revue Critique</i>, 16 Septembre 1905, p. 209.</p>
+  <p class="footnote">2. Dans un texte du codex 68 de la Bibliothèque Vaticane (<i>Bessarione</i>, Série II, Vol. IV, Fasc. 70) la 2 f. sg. est représentée par un pronom suffixe <em>ⲣ</em> qui s'ajoute aux formes préfixes terminées en <em>ⲉ</em> dans le copte classique: <em>ⲛⲉⲣⲥⲁϫⲓ</em> pour <em>ⲛⲉ-ⲥⲁϫⲓ</em> «tes paroles»; <em>ⲛ̀ⲧⲉⲣ-ⲥⲱⲧⲉⲙ</em> pour <em>ⲛ̀ⲧⲉ-ⲥⲱⲧⲉⲙ</em> «que tu entendes». Cette forme se trouve aussi dans «Coptic apocryphal Gospels» par F. Robinson. Cf. <i>Sphinx</i> IV, 32. La grammaire d'Abou Shâker (Bibl. Nat. ms. copt. 53 f. 56 verso) dit ceci: «2<sup>e</sup> pers. du fém. sing., signe «<em>ⲣ</em>»: <em>ⲁⲣⲱⲛϧ</em> «tu as vécu», <em>ⲁⲣⲉⲱⲛϧ</em> «tu vis», <em>ⲛⲧⲉⲱⲛϧ</em> «que tu vives», etc.».</p>
+  <p>Comme exemple, nous donnons ici la suffixation aux deux prépositions les plus usitées <em>ⲉ- ⲉⲣⲟ⸗</em> «vers, à <em>الى</em>», <em>ⲛ̀- ⲛ⸗</em> «à <em>لِ</em>»:</p>
+  <p>Sur <em>ⲛ̀-</em> se modèlent la particule du génitif <em>ⲛ̀ⲧⲉ- ⲛ̀⸗</em> «de» et la préposition <em>ⲛⲉⲙ⸗</em> «avec».</p>
+  <table>
+    <tr>
+      <td>Sing.</td><td>1.</td><td><em>ⲉⲣⲟⲓ</em></td><td><em>الي</em></td><td><em>ⲛⲏⲓ</em></td><td><em>لي</em></td>
+    </tr>
+    <tr>
+      <td></td><td>2. m.</td><td><em>ⲉⲣⲟⲕ</em></td><td><em>اليكَ</em></td><td><em>ⲛⲁⲕ</em></td><td><em>لكَ</em></td>
+    </tr>
+    <tr>
+      <td></td><td>f.</td><td><em>ⲉⲣⲟ</em></td><td><em>اليكِ</em></td><td><em>ⲛⲉ</em></td><td><em>لكِ</em></td>
+    </tr>
+    <tr>
+      <td></td><td>3. m.</td><td><em>ⲉⲣⲟϥ</em></td><td><em>اليه</em></td><td><em>ⲛⲁϥ</em></td><td><em>لهُ</em></td>
+    </tr>
+    <tr>
+      <td></td><td>f.</td><td><em>ⲉⲣⲟⲥ</em></td><td><em>اليها</em></td><td><em>ⲛⲁⲥ</em></td><td><em>لها</em></td>
+    </tr>
+    <tr>
+      <td>Pl.</td><td>1.</td><td><em>ⲉⲣⲟⲛ</em></td><td><em>الينا</em></td><td><em>ⲛⲁⲛ</em></td><td><em>لنا</em></td>
+    </tr>
+    <tr>
+      <td></td><td>2.</td><td><em>ⲉⲣⲱⲧⲉⲛ</em></td><td><em>اليكم</em></td><td><em>ⲛⲱⲧⲉⲛ</em></td><td><em>لكُم</em></td>
+    </tr>
+    <tr>
+      <td></td><td>3.</td><td><em>ⲉⲣⲱⲟⲩ</em></td><td><em>اليهم</em></td><td><em>ⲛⲱⲟⲩ</em></td><td><em>لهُم</em></td>
+    </tr>
+  </table>
+  <h5 class="smallcaps">II. Pronoms absolus.</h5>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th></th><th>Pl.</th><th></th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ⲁⲛⲟⲕ</em></td><td>moi</td><td>1.</td><td><em>ⲁⲛⲟⲛ</em></td><td>nous</td>
+    </tr>
+    <tr>
+      <td>2 m.</td><td><em>ⲛ̀ⲑⲟⲕ</em></td><td>toi</td><td>2.</td><td><em>ⲛ̀ⲑⲱⲧⲉⲛ</em></td><td>vous</td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲛ̀ⲑⲟ</em></td><td>toi <i>f.</i></td><td></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3 m.</td><td><em>ⲛ̀ⲑⲟϥ</em></td><td>lui</td><td>3.</td><td><em>ⲛ̀ⲑⲱⲟⲩ</em></td><td>eux, elles.</td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲛ̀ⲑⲟⲥ</em></td><td>elle</td><td></td><td></td><td></td>
+    </tr>
+  </table>
 </div>
 	</body>
 </html>
