--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1109,6 +1109,7 @@
       <td>f.</td><td><em>ⲛ̀ⲑⲟⲥ</em></td><td>elle</td><td></td><td></td><td></td>
     </tr>
   </table>
+  <p>Le pronom personnel absolu remplit deux fonctions principales: 1. Il est sujet et attribut dans la proposition nominale (555); 2. il s'emploie comme apposition à un autre pronom pour en renforcer le sens (<em>توكيد</em>).</p>
 </div>
 	</body>
 </html>
