--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1110,6 +1110,14 @@
     </tr>
   </table>
   <p>Le pronom personnel absolu remplit deux fonctions principales: 1. Il est sujet et attribut dans la proposition nominale (555); 2. il s'emploie comme apposition à un autre pronom pour en renforcer le sens (<em>توكيد</em>).</p>
+  <p>Apposition au sujet:</p>
+  <p><em>ⲫⲁⲓ ⲡⲉ ⲫⲏ ⲉⲧⲁⲓϫⲟⲥ ⲁⲛⲟⲕ ⲉⲑⲃⲏⲧϥ</em> «c'est de celui-là que j'ai parlé moi-même»<sup class="footnote">1</sup>.</p>
+  <p><em>ⲁⲓⲉⲙⲓ ϫⲉ ⲕⲉⲣϩⲟϯ ⲛ̀ⲑⲟⲕ ϧⲁⲧϩⲏ ⲙ̀ⲫⲛⲟⲩϯ</em> «je sais que tu crains Dieu, toi»<sup class="footnote">2</sup>.</p>
+  <p>Apposition au complément:</p>
+  <p><em>ⲫⲁⲓ ⲁⲛⲟⲕ ⲉⲧⲁⲩⲭⲁⲧ ⲛⲁϥ ⲛ̀ⲣⲉϥϩⲓⲱⲓϣ</em> l'Evangile «pour lequel on m'a établi moi-même prédicateur»<sup class="footnote">3</sup>.</p>
+  <p>Apposition à l'adjectif possessif:</p>
+  <p><em>ⲛⲉⲛ-ⲏⲟⲩ ⲁⲛⲟⲛ</em> «nos maisons à nous»<sup class="footnote">4</sup>.</p>
+  <h5 class="smallcaps">III. Génitif et accusatif du pronom personnel.</h5>
 </div>
 	</body>
 </html>
