--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1118,6 +1118,26 @@
   <p>Apposition à l'adjectif possessif:</p>
   <p><em>ⲛⲉⲛ-ⲏⲟⲩ ⲁⲛⲟⲛ</em> «nos maisons à nous»<sup class="footnote">4</sup>.</p>
   <h5 class="smallcaps">III. Génitif et accusatif du pronom personnel.</h5>
+  <table>
+    <tr>
+      <th>Sing.</th><th></th><th>Pl.</th><th></th>
+    </tr>
+    <tr>
+      <td>1.</td><td><em>ⲙ̀ⲙⲟⲓ</em></td><td>1.</td><td><em>ⲙ̀ⲙⲟⲛ</em></td>
+    </tr>
+    <tr>
+      <td>2 m.</td><td><em>ⲙ̀ⲙⲟⲕ</em></td><td>2.</td><td><em>ⲙⲙⲱⲧⲉⲛ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲙ̀ⲙⲟ</em></td><td></td><td></td>
+    </tr>
+    <tr>
+      <td>3 m.</td><td><em>ⲙ̀ⲙⲟϥ</em></td><td>3.</td><td><em>ⲙ̀ⲙⲱⲟⲩ</em></td>
+    </tr>
+    <tr>
+      <td>f.</td><td><em>ⲙ̀ⲙⲟⲥ</em></td><td></td><td></td>
+    </tr>
+  </table>
 </div>
 	</body>
 </html>
