--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1138,6 +1138,13 @@
       <td>f.</td><td><em>ⲙ̀ⲙⲟⲥ</em></td><td></td><td></td>
     </tr>
   </table>
+  <p>Ce mot<sup class="footnote">5</sup> sert d'état pronominal à la préposition <em>ⲛ</em> (<em>ⲙ</em>) (316). Il s'emploie comme pronom:</p>
+  <p class="footnote">1. Jean 1, 30.</p>
+  <p class="footnote">2. Gen. 22, 12.</p>
+  <p class="footnote">3. 2 Tim. 1, 11.</p>
+  <p class="footnote">4. Ex. 12, 27.</p>
+  <p class="footnote">5. «<i>mmo</i> dérive de la préposition complexe <i>n-amou</i>, qu'on trouve dans la <em>κοινὴ</em>) Ramesside; <i>namoù</i> avec l'accent sur la finale est devenu <i>nemò</i>, <i>mmò</i>, <i><sup>e</sup>mmò</i>». <i>Maspero, Revue Critique</i>, 16 Sept. 1905, p. 209.</p>
+  
 </div>
 	</body>
 </html>
